# shed

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: ci.yml  release.yml
crates/shed_macros/: Cargo.toml
devtools/: readme_toc.py
doc/: autocmd.txt  builtin.txt  ex.txt  help.txt  keybinds.txt  prompt.txt
examples/: cool_prompt.sh  copilot.py  status_line.sh
include/: version.shed
include/completions/: ..sh  alias.sh  autocmd.sh  bg.sh  builtin.sh  builtin_comp.sh  cd.sh  cd_comp.sh  cd_comp.shed  command.sh  compadd_comp.shed  declare.sh  disown.sh  exec.sh  export.sh  fg.sh  fpop.sh  fpush.sh  hash.sh  help.sh  help_comp.shed  hist.sh  keymap_comp.shed  kill.sh  local.sh  pop.sh  push.sh  pushd.sh  read.sh  readkey.sh  readonly.sh  rotate.sh  set.sh  set_comp.shed  shopt.sh  shopt_comp.sh  shopt_comp.shed  source.sh  trap.sh  type.sh  (+4 more)
include/functions/: logout.sh  split.sh
include/help/: arith.txt  autocmd.txt  builtin.txt  commands.txt  ex.txt  functions.txt  glob.txt  help.txt  jobs.txt  keybinds.txt  param.txt  prompt.txt  redirect.txt  scripting.txt  socket.txt  variables.txt
nix/: hm-module.nix  module.nix  render_rc.nix  shed_opts.nix
src/: ;  getopt.rs  input.rs  interactive.rs  jobs.rs  lifecycle.rs  main.rs  procio.rs  shopt.rs  signal.rs  socket.rs
src/builtin/: alias.rs  arrops.rs  autocmd.rs  cd.rs  complete.rs  defer.rs  dirstack.rs  echo.rs  eval.rs  evaluate.rs  exec.rs  fixcmd.rs  flog.rs  flowctl.rs  genrc.rs  getopt.rs  getopts.rs  hash.rs  hist.rs  intro.rs  jobctl.rs  keymap.rs  map.rs  mod.rs  msg.rs  (+14 more)
(+102 files in other folders)
