[workspace]
members = [".", "crates/shed_macros"]
resolver = "2"

[package]
name = "shed"
description = "A linux shell written in rust"
publish = false
version = "0.23.2"

edition = "2024"

[profile.release]
debug = true

[profile.dist]
inherits = "release"
debug = false
strip = true

[dependencies]
shed_macros = { path = "./crates/shed_macros" }
ariadne = "0.6.0"
bitflags = { version = "2.11.1", features = ["serde"] }
chrono = "0.4.44"
chrono-english = "0.1.8"
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
fnmatch-regex = "0.3.0"
glob = "0.3.3"
itertools = "0.14.0"
log = "0.4.29"
nix = { version = "0.31.2", features = [
		"uio",
		"term",
		"user",
		"resource",
		"hostname",
		"fs",
		"default",
		"signal",
		"process",
		"event",
		"ioctl",
		"poll"
	]
}
rand = "0.10.1"
regex = "1.12.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
scopeguard = "1.2.0"
serde_json = "1.0.149"
smallvec = { version = "1.15.1", features = ["serde", "write"] }
tempfile = "3.27.0"
unicode-segmentation = "1.13.2"
unicode-width = "0.2.2"
uuid = { version = "1.23.1", features = ["v4"] }
vte = "0.15"
yansi = "1.0.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.27.0"

[[bin]]
name = "shed"
